# Splunk-Assistant-Skills

./: .gitignore  .pre-commit-config.yaml  API_GAP_ANALYSIS.md  CHANGELOG.md  CLAUDE.md  Makefile  PROPOSAL_FEEDBACK.md  README.md  REFACTORING_FEEDBACK.md  conftest.py  pyproject.toml  pytest.ini  release-please-config.json  requirements-e2e.txt  requirements.txt
.claude/: settings.example.json  settings.json
.claude-plugin/: marketplace.json  plugin.json
.claude/skills/splunk-alert/: SKILL.md  plugin.json
.claude/skills/splunk-app/: SKILL.md  plugin.json
.claude/skills/splunk-assistant/: plugin.json
.claude/skills/splunk-export/: plugin.json
.claude/skills/splunk-job/: SKILL.md  plugin.json
.claude/skills/splunk-kvstore/: SKILL.md  plugin.json
.claude/skills/splunk-lookup/: SKILL.md  plugin.json
.claude/skills/splunk-metadata/: SKILL.md  plugin.json
.claude/skills/splunk-metrics/: SKILL.md  plugin.json
.claude/skills/splunk-rest-admin/: SKILL.md  plugin.json
.claude/skills/splunk-savedsearch/: SKILL.md  plugin.json
.claude/skills/splunk-search/: SKILL.md  plugin.json
.claude/skills/splunk-security/: SKILL.md  plugin.json
.claude/skills/splunk-tag/: SKILL.md  plugin.json
.github/workflows/: release.yml  sync-marketplace.yml  validate.yml
commands/: assistant-skills-setup.md  skill-info.md
docker/e2e/: Dockerfile  docker-compose.yml
docs/: ARCHITECTURE.md  ASSISTANT_SKILLS_ALIGNMENT.md  CLI_REFERENCE.md  CONFIGURATION.md  DEVELOPMENT.md  SPL_PATTERNS.md  TESTING.md  TROUBLESHOOTING.md
plugins/splunk-assistant-skills/: README.md  plugin.json
plugins/splunk-assistant-skills/commands/: browse-skills.md  splunk-discover-instance.md
scripts/: SETUP-ENV-PROMPT.md  claude-safe  migrate_imports.py  run-e2e-tests.sh  setup-env.sh  validate_cli_docs.py
skills/shared/config/: config.example.json
skills/shared/docs/: SAFEGUARDS.md
skills/shared/tests/: conftest.py  test_spl_helper.py  test_time_utils.py  test_validators.py
skills/splunk-alert/: SKILL.md
skills/splunk-alert/scripts/: acknowledge_alert.py  create_alert.py  get_alert.py  get_triggered_alerts.py  list_alerts.py
skills/splunk-alert/tests/: conftest.py
skills/splunk-app/: SKILL.md
skills/splunk-app/scripts/: disable_app.py  enable_app.py  get_app.py  install_app.py  list_apps.py  uninstall_app.py
skills/splunk-app/tests/: conftest.py
skills/splunk-assistant/: SKILL.md
skills/splunk-export/: SKILL.md
skills/splunk-export/scripts/: estimate_export_size.py  export_raw.py  export_results.py  export_with_checkpoint.py
skills/splunk-job/: SKILL.md
skills/splunk-job/scripts/: cancel_job.py  create_job.py  delete_job.py  finalize_job.py  get_job_status.py  list_jobs.py  pause_job.py  poll_job.py  set_job_ttl.py  unpause_job.py
skills/splunk-kvstore/: SKILL.md
skills/splunk-kvstore/scripts/: create_collection.py  delete_collection.py  delete_record.py  get_record.py  insert_record.py  list_collections.py  query_collection.py  update_record.py
skills/splunk-kvstore/tests/: conftest.py  test_delete_collection.py  test_list_collections.py  test_query_collection.py
skills/splunk-lookup/: SKILL.md
skills/splunk-lookup/scripts/: delete_lookup.py  download_lookup.py  get_lookup.py  list_lookups.py  upload_lookup.py
skills/splunk-lookup/tests/: conftest.py  test_lookup_operations.py
skills/splunk-metadata/: SKILL.md
skills/splunk-metadata/scripts/: create_index.py  get_field_summary.py  get_index_info.py  list_indexes.py  list_sources.py  list_sourcetypes.py  metadata_search.py
skills/splunk-metadata/tests/: conftest.py  test_metadata_operations.py
skills/splunk-metrics/: SKILL.md
skills/splunk-metrics/scripts/: list_metric_indexes.py  list_metrics.py  mcatalog.py  mstats.py
skills/splunk-rest-admin/: SKILL.md
skills/splunk-savedsearch/: SKILL.md
skills/splunk-search/: SKILL.md
skills/splunk-security/: SKILL.md
skills/splunk-tag/: SKILL.md
src/splunk_assistant_skills/: __init__.py  utils.py
tests/: test_cli.py
tests/e2e/: README.md  conftest.py  runner.py  test_cases.yaml  test_plugin_e2e.py
(+273 files in other folders)
