[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "splunk-assistant-skills"
version = "2.0.0"
description = "Claude Code plugin for natural language Splunk automation - documentation and slash commands for splunk-as CLI"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Jason Krueger", email = "grandcamel@gmail.com" }
]
keywords = [
    "splunk",
    "claude",
    "assistant",
    "skills",
    "automation",
    "plugin",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "splunk-as>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "black>=23.0.0",
    "isort>=5.12.0,<6.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/grandcamel/Splunk-Assistant-Skills"
Repository = "https://github.com/grandcamel/Splunk-Assistant-Skills"
Issues = "https://github.com/grandcamel/Splunk-Assistant-Skills/issues"

[tool.hatch.build.targets.sdist]
include = [
    "/plugins",
]

[tool.hatch.build.targets.wheel]
packages = ["plugins/splunk-assistant-skills"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
